@@ -1,0 +1,44 @@
+'''
+Created on Nov 21, 2012
+
+@author: ajju
+'''
+from common import HttpUtils
+from common.DataObjects import VideoHostingInfo, VideoInfo, VIDEO_QUAL_HD_720, \
+    VIDEO_QUAL_SD
+import re
+
+VIDEO_HOSTING_NAME = 'MediaPlayBox'
+def getVideoHostingInfo():
+    video_hosting_info = VideoHostingInfo()
+    video_hosting_info.set_video_hosting_image('http://www.mediaplaybox.com/administration/fckeditor/uploaded_files/mslogo.png')
+    video_hosting_info.set_video_hosting_name(VIDEO_HOSTING_NAME)
+    return video_hosting_info
+
+def retrieveVideoInfo(video_id):
+    video_info = VideoInfo()
+    video_info.set_video_hosting_info(getVideoHostingInfo())
+    video_info.set_video_id(video_id)
+    try:
+        video_link = 'http://www.mediaplaybox.com/mobile?vinf=' + str(video_id)
+        html = HttpUtils.HttpClient().getHtmlContent(url=video_link, headers=HttpUtils.IPAD_HEADERS)
+        video_file = re.compile('href="http://www.mediaplaybox.com/media/files_flv/(.+?)"').findall(html)[0]
+        img_file = re.compile('src="http://www.mediaplaybox.com/media/files_thumbnail/(.+?)"').findall(html)[0]
+        video_link = 'http://www.mediaplaybox.com/media/files_flv/' + video_file.replace('_ipod.mp4', '.flv')
+        hd_video_link = 'http://www.mediaplaybox.com/media/files_flv/' + video_file.replace('_ipod.mp4', '_hd.mp4')
+        img_link = 'http://www.mediaplaybox.com/media/files_thumbnail/' + img_file
+        video_info.set_video_stopped(False)
+        video_info.set_video_image(img_link)
+        video_info.set_video_name("Media PlayBox Video")
+        try:
+            response = HttpUtils.HttpClient().getResponse(url=hd_video_link)
+            if response.status < 400:
+                video_info.add_video_link(VIDEO_QUAL_HD_720, hd_video_link, addUserAgent=False)
+        except Exception,e:
+            print 'No HD link'
+        video_info.add_video_link(VIDEO_QUAL_SD, video_link, addUserAgent=False)
+    except Exception,e:
+        video_info.set_video_stopped(True)
+        raise e
+    return video_info
+
