@@ -1,3 +1,6 @@
+[B]Version v2.5.5[/B]
+- MediaPlayBox parsed for video URL. Trailers are not working so far.
+
 [B]Version v2.5.4[/B]
 - SominalTv website URL updated with new.
 
